--- a/package.json
+++ b/package.json
@@ -1,19 +1,14 @@
 {
-  "name": "electron-agent",
+  "name": "activity-tracker-agent",
   "version": "1.0.0",
+  "description": "Electron app to track daily tasks and timeline with MongoDB",
   "main": "main.js",
   "scripts": {
     "start": "electron ."
   },
   "dependencies": {
-    "electron": "^36.3.2",
-    "html2canvas": "^1.4.1",
-    "iohook": "^0.9.3",
-    "jspdf": "^3.0.1",
-    "node-fetch": "^2.6.7",
-    "ws": "^8.18.2"
+    "electron": "^25.0.0",
+    "mongoose": "^7.0.4"
   },
-  "devDependencies": {
-    "electron-rebuild": "^3.2.9"
-  }
+  "devDependencies": {}
 }
